# lap-doer

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
docs/: LapDoerScheme.drawio  project_assumptions.txt
src/lap_doer/: example.py
src/lap_doer/Car_Models/: car.py  car_protocol.py
src/lap_doer/car_models/: .car.py.bak  aero_model.py  car_example.py  car_model.py  car_protocol.py  chassis_model.py  tyre_model.py
tests/: test_example.py
