[tool.poetry]
name = "lap-doer"
version = "0.1.0"
description = "A Python project managed with Poetry, tested with Pytest, and linted using Ruff."
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "lap_doer", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"  # You can specify the latest version or *
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py39"
lint.select = ["E", "W", "F", "N", "D", "I", "PL"]
lint.ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

